fix(menu): fix visibility issue of menu introbox

--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -36,8 +36,12 @@
     pointer-events: none;
     transition: opacity 0.3s $menu-items-translate, top $menu-items-translate;
 
-    &--intro {
+    &--visible {
       opacity: 1;
+      transition: opacity 0.3s, top $menu-items-translate;
+    }
+
+    &--intro {
       transition: top $intro-link-change;
     }
     
@@ -71,7 +75,6 @@
     }
     
     &--bottom {
-      background-color: #666;
       bottom: 0;
       left: 0;
     }
